# libsxcfg

./: .gitignore  COPYING  ChangeLog  Doxyfile  README  clean_bootstrap.sh  configure.ac
scripts/: common.sh
src/: Makefile.am  sxcfg.c  sxcfg.h  sxcfg_export.h
testing/: Makefile.am  test.cfg  testget.c  testset.c
